--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ opencv-python = "^4.1.2"
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 ipython = "^7.11.1"
+pylama = "^7.7.1"
+ipykernel = "^5.1.4"
 
 [build-system]
 requires = ["poetry>=0.12"]
