--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,15 +9,19 @@ python = "^3.7"
 torch = "^1.4.0"
 torchvision = "^0.5.0"
 networkx = "^2.4"
-colour-science = {extras = ["optional"], version = "^0.3.14"}
+colour-science = {extras = ["plotting", "optional"], version = "^0.3.15"}
 colour-hdri = {extras = ["optional"], version = "^0.1.6"}
 opencv-python = "^4.1.2"
+matplotlib = "^3.1.3"
+imageio = "^2.6.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 ipython = "^7.11.1"
 pylama = "^7.7.1"
 ipykernel = "^5.1.4"
+jupyter = "^1.0.0"
+isort = "^4.3.21"
 
 [build-system]
 requires = ["poetry>=0.12"]
