--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ colour-hdri = {extras = ["optional"], version = "^0.1.6"}
 opencv-python = "^4.1.2"
 matplotlib = "^3.1.3"
 imageio = "^2.6.1"
+black = "^19.10b0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
