--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": ".venv/bin/python3"
+    "python.pythonPath": "/home/shane/.cache/pypoetry/virtualenvs/dhdrnet-md5k9ngR-py3.8/bin/python"
 }
