--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ ipykernel = "^5.1.4"
 jupyter = "^1.0.0"
 isort = "^4.3.21"
 nbstripout = "^0.3.7"
+pyflakes = "^2.1.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
