--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ opencv-python = "^4.1.2"
 matplotlib = "^3.1.3"
 imageio = "^2.6.1"
 black = "^19.10b0"
+scikit-image = "^0.16.2"
+more-itertools = "^8.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -25,6 +27,7 @@ jupyter = "^1.0.0"
 isort = "^4.3.21"
 nbstripout = "^0.3.7"
 pyflakes = "^2.1.1"
+deprecated = "^1.2.7"
 
 [build-system]
 requires = ["poetry>=0.12"]
