--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,8 @@ isort = "^4.3.21"
 nbstripout = "^0.3.7"
 pyflakes = "^2.1.1"
 deprecated = "^1.2.7"
+mypy = "^0.770"
+rope = "^0.16.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
