--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,6 +11,12 @@
       "program": "${workspaceRoot}/dhdrnet/data_gen.py",
       "args": ["-m", "debevec"],
       "console": "integratedTerminal"
+    },
+    {
+      "name": "Python: model train",
+      "type": "python",
+      "request": "launch",
+      "module": "dhdrnet.model",
     }
   ]
 }
