training loop almost going

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ imageio = "^2.6.1"
 black = "^19.10b0"
 scikit-image = "^0.16.2"
 more-itertools = "^8.2.0"
+pillow = "^7.0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
