--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ black = "^19.10b0"
 scikit-image = "^0.16.2"
 more-itertools = "^8.2.0"
 pillow = "^7.0.0"
+pylama = "^7.7.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
