updated project deps

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ scikit-image = "^0.16.2"
 more-itertools = "^8.2.0"
 pillow = "^7.0.0"
 pylama = "^7.7.1"
+recordclass = "^0.13.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
