--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,8 @@ authors = ["Shane Segal <shane@smsegal.ca>"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
-torch = "^1.4.0"
-torchvision = "^0.5.0"
+torch = "^1.5.0"
+torchvision = "^0.6.0"
 networkx = "^2.4"
 colour-science = {extras = ["plotting", "optional"], version = "^0.3.15"}
 colour-hdri = {extras = ["optional"], version = "^0.1.6"}
@@ -20,6 +20,7 @@ more-itertools = "^8.2.0"
 pillow = "^7.0.0"
 pylama = "^7.7.1"
 recordclass = "^0.13.2"
+jupyterlab = "^2.1.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
