rich was too much, just use tqdm

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ pillow = "^7.0.0"
 pylama = "^7.7.1"
 recordclass = "^0.13.2"
 rich = "^1.0.0"
+tqdm = "^4.46.0"
+pytorch-lightning = "^0.7.5"
 
 [tool.poetry.dev-dependencies]
 jupyterlab = "^2.1.1"
