--- a/requirements.txt
+++ b/requirements.txt
@@ -1,108 +1,65 @@
-appdirs==1.4.3
-appnope==0.1.0; sys_platform == "darwin" or platform_system == "Darwin" or python_version >= "3.3" and sys_platform == "darwin"
-atomicwrites==1.3.0; sys_platform == "win32"
-attrs==19.3.0
-backcall==0.1.0
+absl-py==0.9.0
 backports.functools-lru-cache==1.6.1
-black==19.10b0
-bleach==3.1.4
+cachetools==4.1.0
 certifi==2020.4.5.1
 chardet==3.0.4
-click==7.1.2
-colorama==0.4.3; python_version >= "3.3" and sys_platform == "win32" or sys_platform == "win32"
+colorama==0.4.3
 colour-demosaicing==0.1.5
 colour-hdri==0.1.6
 colour-science==0.3.15
+commonmark==0.9.1
 cycler==0.10.0
 decorator==4.4.2
-defusedxml==0.6.0
-deprecated==1.2.9
-entrypoints==0.3
 future==0.18.2
+google-auth==1.14.3
+google-auth-oauthlib==0.4.1
+grpcio==1.28.1
 idna==2.9
 imageio==2.8.0
 importlib-metadata==1.6.0; python_version < "3.8"
-ipykernel==5.2.1
-ipython==7.13.0
-ipython-genutils==0.2.0
-ipywidgets==7.5.1
-isort==4.3.21
-jedi==0.17.0
-jinja2==2.11.2
-json5==0.9.4
-jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client==6.1.3
-jupyter-console==6.1.0
-jupyter-core==4.6.3
-jupyterlab==2.1.1
-jupyterlab-server==1.1.1
 kiwisolver==1.2.0
-markupsafe==1.1.1
+markdown==3.2.2
 matplotlib==3.2.1
 mccabe==0.6.1
-mistune==0.8.4
 more-itertools==8.2.0
-mypy==0.770
-mypy-extensions==0.4.3
-nbconvert==5.6.1
-nbformat==5.0.6
-nbstripout==0.3.7
 networkx==2.4
-notebook==6.0.3
-numpy==1.18.3
+numpy==1.18.4
+oauthlib==3.1.0
 opencv-python==4.2.0.34
-packaging==20.3
 pandas==1.0.3
-pandocfilters==1.4.2
-parso==0.7.0
-pathspec==0.8.0
-pexpect==4.8.0; python_version >= "3.3" and sys_platform != "win32" or sys_platform != "win32"
-pickleshare==0.7.5
 pillow==7.1.2
-pluggy==0.13.1
-prometheus-client==0.7.1
-prompt-toolkit==3.0.5
-ptyprocess==0.6.0; sys_platform != "win32" or os_name != "nt" or python_version >= "3.3" and sys_platform != "win32"
-py==1.8.1
-pycodestyle==2.5.0
+pprintpp==0.4.0
+protobuf==3.11.3
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.6.0
 pydocstyle==5.0.2
 pyflakes==2.2.0
 pygments==2.6.1
 pylama==7.7.1
 pyparsing==2.4.7
-pyrsistent==0.16.0
-pytest==5.4.1
 python-dateutil==2.8.1
+pytorch-lightning==0.7.5
+pytorch-msssim==0.2.0
 pytz==2020.1
 pywavelets==1.1.1
-pywin32==227; sys_platform == "win32"
-pywinpty==0.5.7; os_name == "nt"
-pyzmq==19.0.0
-qtconsole==4.7.3
-qtpy==1.9.0
 rawpy==0.14.0
 recordclass==0.13.2
-regex==2020.4.4
 requests==2.23.0
-rope==0.16.0
+requests-oauthlib==1.3.0
+rich==1.1.1
+rsa==4.0
 scikit-image==0.16.2
 scipy==1.4.1
-send2trash==1.5.0
 six==1.14.0
 snowballstemmer==2.0.0
-terminado==0.8.3
-testpath==0.4.4
-toml==0.10.0
+tensorboard==2.2.1
+tensorboard-plugin-wit==1.6.0.post3
 torch==1.5.0
 torchvision==0.6.0
-tornado==6.0.4
-traitlets==4.3.3
-typed-ast==1.4.1
+tqdm==4.46.0
 typing-extensions==3.7.4.2
 urllib3==1.25.9
-wcwidth==0.1.9
-webencodings==0.5.1
-widgetsnbextension==3.5.1
-wrapt==1.12.1
+werkzeug==1.0.1
+wheel==0.34.2; python_version >= "3"
 zipp==3.1.0; python_version < "3.8"
