--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,19 +22,17 @@ rich = "^1.0.0"
 tqdm = "^4.46.0"
 pytorch-lightning = "^0.7.5"
 pytorch-msssim = "^0.2.0"
+pylint = "^2.5.2"
 
 [tool.poetry.dev-dependencies]
-jupyterlab = "^2.1.1"
 pytest = "^5.2"
 matplotlib = "^3.1.3"
 ipython = "^7.11.1"
 pylama = "^7.7.1"
 ipykernel = "^5.1.4"
-jupyter = "^1.0.0"
 isort = "^4.3.21"
 nbstripout = "^0.3.7"
 pyflakes = "^2.1.1"
-deprecated = "^1.2.7"
 mypy = "^0.770"
 rope = "^0.16.0"
 
