--- a/requirements.txt
+++ b/requirements.txt
@@ -63,3 +63,7 @@ urllib3==1.25.9
 werkzeug==1.0.1
 wheel==0.34.2; python_version >= "3"
 zipp==3.1.0; python_version < "3.8"
+
+pytest~=5.4.2
+dhdrnet~=0.1.0
+Deprecated~=1.2.9
