--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ nbstripout = "^0.3.7"
 pyflakes = "^2.1.1"
 mypy = "^0.770"
 rope = "^0.16.0"
+ipympl = "^0.5.6"
 
 [build-system]
 requires = ["poetry>=0.12"]
