--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,34 +8,26 @@ authors = ["Shane Segal <shane@smsegal.ca>"]
 python = "^3.7"
 torch = "^1.5.0"
 torchvision = "^0.6.0"
-networkx = "^2.4"
-colour-science = {extras = ["plotting", "optional"], version = "^0.3.15"}
 colour-hdri = {extras = ["optional"], version = "^0.1.6"}
 opencv-python = "^4.1.2"
-imageio = "^2.6.1"
 scikit-image = "^0.16.2"
 more-itertools = "^8.2.0"
 pillow = "^7.0.0"
-pylama = "^7.7.1"
-recordclass = "^0.13.2"
-rich = "^1.0.0"
 tqdm = "^4.46.0"
 pytorch-lightning = "^0.7.5"
 pytorch-msssim = "^0.2.0"
-pylint = "^2.5.2"
+recordclass = "^0.13.2"
+pandas = "^1.0.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 matplotlib = "^3.1.3"
-ipython = "^7.11.1"
-pylama = "^7.7.1"
 ipykernel = "^5.1.4"
 isort = "^4.3.21"
-nbstripout = "^0.3.7"
 pyflakes = "^2.1.1"
 mypy = "^0.770"
-rope = "^0.16.0"
 ipympl = "^0.5.6"
+seaborn = "^0.10.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
