--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["Shane Segal <shane@smsegal.ca>"]
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "~3.8"
 torch = "^1.5.0"
 torchvision = "^0.6.0"
 colour-hdri = {extras = ["optional"], version = "^0.1.6"}
@@ -18,6 +18,7 @@ pytorch-lightning = "^0.7.5"
 pytorch-msssim = "^0.2.0"
 recordclass = "^0.13.2"
 pandas = "^1.0.4"
+tables = "^3.6.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
