--- a/requirements.txt
+++ b/requirements.txt
@@ -1,69 +1,53 @@
 absl-py==0.9.0
-backports.functools-lru-cache==1.6.1
 cachetools==4.1.0
-certifi==2020.4.5.1
+certifi==2020.4.5.2
 chardet==3.0.4
-colorama==0.4.3
 colour-demosaicing==0.1.5
 colour-hdri==0.1.6
 colour-science==0.3.15
-commonmark==0.9.1
 cycler==0.10.0
 decorator==4.4.2
 future==0.18.2
-google-auth==1.14.3
+google-auth==1.16.1
 google-auth-oauthlib==0.4.1
-grpcio==1.28.1
+grpcio==1.29.0
 idna==2.9
 imageio==2.8.0
-importlib-metadata==1.6.0; python_version < "3.8"
+importlib-metadata==1.6.1; python_version < "3.8"
 kiwisolver==1.2.0
 markdown==3.2.2
 matplotlib==3.2.1
-mccabe==0.6.1
-more-itertools==8.2.0
+more-itertools==8.3.0
 networkx==2.4
-numpy==1.18.4
+numpy==1.18.5
 oauthlib==3.1.0
 opencv-python==4.2.0.34
-pandas==1.0.3
+pandas==1.0.4
 pillow==7.1.2
-pprintpp==0.4.0
-protobuf==3.11.3
+protobuf==3.12.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pycodestyle==2.6.0
-pydocstyle==5.0.2
-pyflakes==2.2.0
-pygments==2.6.1
-pylama==7.7.1
 pyparsing==2.4.7
 python-dateutil==2.8.1
-pytorch-lightning==0.7.5
+pytorch-lightning==0.7.6
 pytorch-msssim==0.2.0
 pytz==2020.1
 pywavelets==1.1.1
+pyyaml==5.3.1
 rawpy==0.14.0
 recordclass==0.13.2
 requests==2.23.0
 requests-oauthlib==1.3.0
-rich==1.1.1
 rsa==4.0
 scikit-image==0.16.2
 scipy==1.4.1
-six==1.14.0
-snowballstemmer==2.0.0
-tensorboard==2.2.1
+six==1.15.0
+tensorboard==2.2.2
 tensorboard-plugin-wit==1.6.0.post3
 torch==1.5.0
 torchvision==0.6.0
-tqdm==4.46.0
-typing-extensions==3.7.4.2
+tqdm==4.46.1
 urllib3==1.25.9
 werkzeug==1.0.1
 wheel==0.34.2; python_version >= "3"
 zipp==3.1.0; python_version < "3.8"
-
-pytest~=5.4.2
-dhdrnet~=0.1.0
-Deprecated~=1.2.9
