--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pytorch-msssim = "^0.2.0"
 recordclass = "^0.13.2"
 pandas = "^1.0.4"
 tables = "^3.6.1"
+sewar = "^0.4.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -29,6 +30,7 @@ pyflakes = "^2.1.1"
 mypy = "^0.770"
 ipympl = "^0.5.6"
 seaborn = "^0.10.1"
+pylama = "^7.7.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
