--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "python.pythonPath": "/home/shane/.cache/pypoetry/virtualenvs/dhdrnet-md5k9ngR-py3.8/bin/python"
+    "python.pythonPath": "/home/smsx/.cache/pypoetry/virtualenvs/dhdrnet-KNUoFHXm-py3.8/bin/python",
+    "python.linting.mypyEnabled": false,
+    "python.linting.pylamaEnabled": true,
+    "python.linting.enabled": true
 }
