--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ mypy = "^0.770"
 ipympl = "^0.5.6"
 seaborn = "^0.10.1"
 pylama = "^7.7.1"
+altair = "^4.1.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
