--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,8 @@ ipympl = "^0.5.6"
 seaborn = "^0.10.1"
 pylama = "^7.7.1"
 altair = "^4.1.0"
+jupyterlab = "^2.2.0"
+jupyterlab_code_formatter = "^1.3.5"
 
 [build-system]
 requires = ["poetry>=0.12"]
