--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,20 +23,17 @@ sewar = "^0.4.3"
 perceptual-similarity-pytorch = {git = "git@github.com:smsegal/PerceptualSimilarity.git"}
 exifread = "^2.1.2"
 torchsummary = "^1.5.1"
+openpyxl = "^3.0.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 matplotlib = "^3.1.3"
 ipykernel = "^5.1.4"
 isort = "^4.3.21"
-pyflakes = "^2.1.1"
 mypy = "^0.770"
-ipympl = "^0.5.6"
 seaborn = "^0.10.1"
 pylama = "^7.7.1"
 altair = "^4.1.0"
-jupyterlab = "^2.2.0"
-jupyterlab_code_formatter = "^1.3.5"
 
 [build-system]
 requires = ["poetry>=0.12"]
