--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "/home/smsx/.cache/pypoetry/virtualenvs/dhdrnet-KNUoFHXm-py3.8/bin/python",
+    "python.pythonPath": "/home/shane/.cache/pypoetry/virtualenvs/dhdrnet-CxDQYEDG-py3.8/bin/python",
     "python.linting.mypyEnabled": false,
     "python.linting.pylamaEnabled": true,
     "python.linting.enabled": true
