--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ scikit-image = "^0.16.2"
 more-itertools = "^8.2.0"
 pillow = "^7.0.0"
 tqdm = "^4.46.0"
-pytorch-lightning = "^0.8"
+pytorch-lightning = ">=0.9"
 pytorch-msssim = "^0.2.0"
 recordclass = "^0.13.2"
 pandas = "^1.0.4"
