--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,8 @@ seaborn = "^0.10.1"
 pylama = "^7.7.1"
 altair = "^4.1.0"
 data-science-types = "^0.2.17"
+jupytext = "^1.6.0"
+pyls-black = "^0.4.6"
 
 [build-system]
 requires = ["poetry>=0.12"]
