--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ altair = "^4.1.0"
 data-science-types = "^0.2.17"
 jupytext = "^1.6.0"
 pyls-black = "^0.4.6"
+black = {version = "^20.8b1", allow-prereleases = true}
 
 [build-system]
 requires = ["poetry>=0.12"]
