--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ data-science-types = "^0.2.17"
 jupytext = "^1.6.0"
 pyls-black = "^0.4.6"
 black = {version = "^20.8b1", allow-prereleases = true}
+python-language-server = "^0.35.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
