--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,14 +9,12 @@ python = "~3.8"
 torch = "^1.5.0"
 torchvision = "^0.6.0"
 colour-hdri = {extras = ["optional"], version = "^0.1.6"}
-opencv-python = "^4.1.2"
 scikit-image = "^0.16.2"
 more-itertools = "^8.2.0"
 pillow = "^7.0.0"
 tqdm = "^4.46.0"
 pytorch-lightning = "^0.8.5"
 pytorch-msssim = "^0.2.0"
-recordclass = "^0.13.2"
 pandas = "^1.0.4"
 tables = "^3.6.1"
 sewar = "^0.4.3"
@@ -25,6 +23,8 @@ torchsummary = "^1.5.1"
 openpyxl = "^3.0.4"
 sklearn = "^0.0"
 lpips = "^0.1.1"
+opencv-python-headless = "^4.4.0"
+recordclass = "^0.14.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -41,6 +41,7 @@ jupytext = "^1.6.0"
 pyls-black = "^0.4.6"
 black = {version = "^20.8b1", allow-prereleases = true}
 python-language-server = "^0.35.1"
+ipywidgets = "^7.5.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
