--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,23 +25,20 @@ sklearn = "^0.0"
 lpips = "^0.1.1"
 opencv-python-headless = "^4.4.0"
 recordclass = "^0.14.1"
+exposure_fusion = "^0.1.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
-pylint = "^2.6.0"
 matplotlib = "^3.1.3"
 ipykernel = "^5.1.4"
-isort = "^4.3.21"
 mypy = "^0.770"
 seaborn = "^0.10.1"
-pylama = "^7.7.1"
 altair = "^4.1.0"
 data-science-types = "^0.2.17"
 jupytext = "^1.6.0"
-pyls-black = "^0.4.6"
 black = {version = "^20.8b1", allow-prereleases = true}
-python-language-server = "^0.35.1"
 ipywidgets = "^7.5.1"
+jupyterlab_code_formatter = "^1.3.6"
 
 [build-system]
 requires = ["poetry>=0.12"]
