--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ lpips = "^0.1.1"
 opencv-python-headless = "^4.4.0"
 recordclass = "^0.14.1"
 exposure_fusion = "^0.1.1"
+pylint = "^2.6.0"
+pylama = "^7.7.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
