--- a/.envrc
+++ b/.envrc
@@ -1,2 +1,3 @@
-export VIRTUAL_ENV="$HOME/.cache/venv/dhdrnet-lightning3.8"
-layout python-venv
+# export VIRTUAL_ENV="$HOME/.cache/venv/dhdrnet-lightning3.8"
+# layout python-venv
+layout poetry
