--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,6 @@ authors = ["Shane Segal <shane@smsegal.ca>"]
 
 [tool.poetry.dependencies]
 python = "~3.8"
-colour-hdri = {extras = ["optional"], version = "^0.1.6"}
 scikit-image = "^0.16.2"
 more-itertools = "^8.2.0"
 pillow = "^7.0.0"
@@ -30,21 +29,17 @@ torch = "^1.7.0"
 torchvision = "^0.8.1"
 pytorch-lightning = "^1.0.8"
 fire = "^0.3.1"
+ipykernel = "^5.4.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 matplotlib = "^3.1.3"
-ipykernel = "^5.1.4"
+# ipykernel = "^5.1.4"
 mypy = "^0.770"
 seaborn = "^0.10.1"
 altair = "^4.1.0"
 data-science-types = "^0.2.17"
-jupytext = "^1.6.0"
 black = {version = "^20.8b1", allow-prereleases = true}
-ipywidgets = "^7.5.1"
-jupyterlab_code_formatter = "^1.3.6"
-python-qt = "^0.50"
-PyQt5 = "^5.15.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
