--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,11 @@ altair = "^4.1.0"
 data-science-types = "^0.2.17"
 black = {version = "^20.8b1", allow-prereleases = true}
 
+[tool.isort]
+profile = "black"
+multi_line_output = 3
+float_to_top = true
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
