--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,13 +35,14 @@ IProgress = "^0.4"
 ipywidgets = "^7.6.3"
 rich = "^9.10.0"
 rawpy = "^0.16.0"
+numpy = "^1.20.1"
+timm = "^0.3.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 matplotlib = "^3.1.3"
-# ipykernel = "^5.1.4"
 mypy = "^0.770"
-seaborn = "^0.10.1"
+seaborn = "^0.11.1"
 altair = "^4.1.0"
 data-science-types = "^0.2.17"
 black = {version = "^20.8b1", allow-prereleases = true}
