--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ python = "~3.8"
 scikit-image = "^0.16.2"
 more-itertools = "^8.2.0"
 pillow = "^7.0.0"
-tqdm = "^4.56.0"
+tqdm = "^4.59.0"
 pytorch-msssim = "^0.2.0"
 pandas = "^1.0.4"
 tables = "^3.6.1"
@@ -46,6 +46,7 @@ seaborn = "^0.11.1"
 altair = "^4.1.0"
 data-science-types = "^0.2.17"
 black = {version = "^20.8b1", allow-prereleases = true}
+ipympl = "^0.6.3"
 
 [tool.isort]
 profile = "black"
